2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	Merge from zmanda EXT.

2007-03-28  Dustin J. Mitchell <dustin@zmanda.com>
	* common/amanda.h: fix typo in SS_SET_INADDR_ANY for non-IPv6 
	  machines
	* gnulib/regenerate/regenerate: update to include visibility
	  and lock modules (See 2007-03-14)
	* recover-src/extract_list.c common-src/krb4-security.c
	  common-src/event.c common-src/security-util.c: use
	  SELECT_ARG_TYPE instead of fd_set

2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* Makefile.am (EXTRA_DIST): Remove contrib/gnulib-update-current.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* changer-src/chg-zd-mtx.sh.in: Exit with a message if the
					configuration file doesn't exist.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Fix error message.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* amandad-src/amandad.c: Fix segfault.

2007-03-23  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c: Use SS_LEN.
	* common-src/util.c: Use SS_LEN.

2007-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security.h (security_driver): Add data_encrypt and
						   data_decrypt function.
	* common-src/bsd-security.c, common-src/bsdtcp-security.c,
	  common-src/bsdudp-security.c, common-src/krb4-security.c,
	  common-src/rsh-security.c,
	  common-src/ssh-security.c: Set data_encrypt and data_decrypt to NULL.

	* common-src/conffile.c: Parse KRB5KEYTAB and KRB5PRINCIPAL on client.
	* common-src/krb5-security.c: Complete rewrite.
	* common-src/security-util.h: Change many prototype.
	* common-src/security-util.c: Change argument to function.
	* recover-src/amrecover.c: Use generic_client_get_security_conf.
	* recover-src/extract_list.c: Use generic_client_get_security_conf.

2007-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	Merge from zmanda EXT.
	- Add SS_INIT, SS_SET_INADDR_ANY, SS_GET_PORT and SS_SET_PORT
	  macros for IPv6 portability