@@ -1,4 +1,9 @@
 2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
+	Fix solaris 9 problem:
+	* common-src/krb5-security.c: Use putenv instead of setenv.
+	* common-src/security-util.c: Set flags according to family.
+
+2007-03-27  Jean-Louis Martineau <martineau@zmanda.com>
 	Merge from zmanda EXT.
 
 2007-03-28  Dustin J. Mitchell <dustin@zmanda.com>
